# mighty-core

./: .clang-format  .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  compile_commands.json  mighty-core-host-check  mighty-core-synth-host  mighty-core-ui
Testing/Temporary/: CTestCostData.txt
documentation/: ARCHITECTURE.md  CHORD_PATTERNS.md  PRODUCT_SPEC.md  TIMELINE_MMETRONOME.md
host/: main.cpp  synth_host.cpp  ui_host.cpp  wav_reader.cpp  wav_reader.h
include/: BuiltInKits.h  KitDefinition.h  Metronome.h  MightyMusicCore.h  SynthRealtimeParams.h
src/: Input.cpp  Input.h  Metronome.cpp  MightyMusicCore.cpp  Output.cpp  Output.h  Scheduler.cpp  Scheduler.h  TempoEngine.cpp  TempoEngine.h
src/core/: MightyMusicCore.cpp
src/engine/: Input.cpp  Input.h  Output.cpp  Output.h  RealtimeCommandQueue.cpp  RealtimeCommandQueue.h  Sound.cpp  Sound.h  SynthSoundTypes.h  Synthesizer.cpp  Synthesizer.h  SynthesizerPatches.cpp  SynthesizerPatches.h  TempoEngine.cpp  TempoEngine.h
src/metronome/: BuiltInKits.cpp  Metronome.cpp
src/scheduler/: Scheduler.cpp  Scheduler.h
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_test_discovery_0cffb54524.json  mmc-tests  mmc-tests[1]_include.cmake  mmc-tests[1]_tests.cmake  test_input.cpp  test_kit_definition.cpp  test_metronome.cpp  test_mighty_music_core.cpp  test_mmc.cpp  test_output.cpp  test_realtime_command_queue.cpp  test_scheduler.cpp  test_synthesizer.cpp
